[tool.poetry]
name = "grafana-templater"
version = "0.1.0"
description = "Use Infrastructure as Code to provision and manage Grafana Dashboards from templates"
authors = ["Dmitry Kovalenko <dmytro.kovalenko@ironsrc.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
