[tool.poetry]
name = "gdbt"
version = "2.2.3"
description = "Use Infrastructure as Code to provision and manage Grafana Dashboards from Templates"
authors = ["Dmitry Kovalenko <dmytro.kovalenko@is.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
rich = "^10.2.1"
attrs = "^20.3.0"
grafana-api = "^1.0.3"
requests = "^2.25.0"
jsonpath-ng = "^1.5.2"
Jinja2 = "^2.11.2"
class-registry = "^2.1.2"
deserialize = "^1.8.0"
dpath = "^2.0.1"
python-consul2 = "^0.1.5"
halo = "^0.0.31"
envtoml = "^0.1.2"
python-configuration = {extras = ["toml", "yaml"], version = "^0.8.1"}
s3path = "^0.2.205"
dictdiffer = "^0.8.1"
flatten-dict = "^0.3.0"
backoff = "^1.10.0"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.2.1"

[tool.poetry.scripts]
gdbt = "gdbt.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
